<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical"
    android:padding="20dp"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipment"
            android:textColor="@color/blue"
            android:textSize="25sp" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/blue"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp">


        <Button
            android:id="@+id/helmet_previous"
            android:layout_width="35dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/previous"
            android:onClick="check" />

        <LinearLayout
            android:id="@+id/helmet_layout"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:gravity="center"

            android:orientation="vertical">


        </LinearLayout>

        <Button
            android:id="@+id/helmet_next"
            android:layout_width="35dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/next"
            android:onClick="onClick" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/shirt_previous"
            android:layout_width="35dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/previous"
            android:onClick="onClick" />

        <LinearLayout
            android:id="@+id/shirt_layout"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">


        </LinearLayout>

        <Button
            android:id="@+id/shirt_next"
            android:layout_width="35dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/next"
            android:onClick="onClick" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/legs_previous"
            android:layout_width="35dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/previous"
            android:onClick="onClick" />

        <LinearLayout

            android:id="@+id/legs_layout"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">


        </LinearLayout>

        <Button
            android:id="@+id/legs_next"
            android:layout_width="35dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/next"
            android:onClick="onClick" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/block_previous"
            android:layout_width="35dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/previous"
            android:onClick="onClick" />

        <LinearLayout
            android:id="@+id/block_layout"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">


        </LinearLayout>

        <Button
            android:id="@+id/block_next"
            android:layout_width="35dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/next"
            android:onClick="onClick" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            style="@style/DefaultButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/default_button"
            android:onClick="onClick"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/apply"
            style="@style/DefaultButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/default_button"
            android:onClick="onClick"
            android:text="@string/apply"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>

