<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/row_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/avatar_layout"
            android:layout_width="100dp"
            android:layout_height="160dp"
            android:gravity="center"
            android:background="@drawable/frame"
            android:orientation="vertical">

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/stats_layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:background="@drawable/frame"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:id="@+id/stats_labels"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/total_score_label"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/total_score"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/avg_score_label"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/avg_score"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/achievements_label"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/achievements"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/games_played_label"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/games_played"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/stats_values"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:layout_marginStart="5dp"
                android:orientation="vertical"
               >

                <TextView
                    android:id="@+id/total_score_value"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"

                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/avg_score_value"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"

                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/achievements_value"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"

                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/games_played_value"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"

                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ListView
            android:id="@+id/result_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="1dp"
            android:orientation="vertical" />
    </LinearLayout>

</LinearLayout>
